--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,17 +1,34 @@
 ---
 
-openvpn_enabled: yes                            # The role is enabled
+openvpn_enabled: yes                                # The role is enabled
 
 openvpn_etcdir: /etc/openvpn
 openvpn_keydir: "{{openvpn_etcdir}}/keys"
 
 # Default settings (See OpenVPN documentation)
+openvpn_host: "{{inventory_hostname}}"              # The server address
 openvpn_port: 1194
 openvpn_proto: udp
 openvpn_dev: tun
 openvpn_server: 10.8.0.0 255.255.255.0
 openvpn_max_clients: 100
 openvpn_log: /var/log/openvpn.log                   # Log's directory
+openvpn_keepalive: "10 120"
+openvpn_ifconfig_pool_persist: ipp.txt
+openvpn_comp_lzo: yes                               # Enable compression
+openvpn_status: openvpn-status.log
+openvpn_verb: 3
+openvpn_user: nobody
+openvpn_group: nogroup
+openvpn_resolv_retry: infinite
+openvpn_server_options: []                          # Additional server options
+                                                    # openvpn_server_options:
+                                                    # - dev-node MyTap
+                                                    # - client-to-client
+openvpn_client_options: []                          # Additional client options
+                                                    # openvpn_client_options:
+                                                    # - dev-node MyTap
+                                                    # - client-to-client
 
 openvpn_key_country: US
 openvpn_key_province: CA
@@ -20,5 +37,12 @@ openvpn_key_org: Fort-Funston
 openvpn_key_email: me@myhost.mydomain
 openvpn_key_size: 1024
 
-openvpn_clients: [ horneds ]
-openvpn_clients_revoke: []
+openvpn_clients: [client]                         # Make clients certificate
+openvpn_clients_revoke: []                        # Revoke clients certificates
+
+# Use PAM authentication
+openvpn_use_pam: yes
+openvpn_use_pam_users: []                         # If empty use system users
+                                                  # otherwise use users from the option
+                                                  # openvpn_use_pam_users:
+                                                  # - { name: user, password: password }
