--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -3,12 +3,32 @@
 - name: Extract easy-rsa files
   unarchive: src=easy-rsa.tar.gz dest={{openvpn_etcdir}}
 
-- template: src=rsa.sh.j2 dest={{openvpn_etcdir}}/rsa.sh mode=700
+- name: Generate scripts
+  template: src={{item}}.j2 dest={{openvpn_etcdir}}/{{item}} mode=0700
+  with_items: [vars, build-server.sh, build-client.sh, revoke-client.sh]
 
-- name: Generate Server CA
-  command: "{{openvpn_etcdir}}/rsa.sh"
-  args:
-    creates: "{{ openvpn_keydir }}"
+- name: Generate Server keys
+  command: "{{openvpn_etcdir}}/build-server.sh"
+  args: { creates: "{{ openvpn_keydir }}" }
+
+- name: Generate Clients keys
+  command: "{{openvpn_etcdir}}/build-client.sh {{item}}"
+  args: { creates: "{{ openvpn_keydir }}/{{item}}.crt" }
+  with_items: openvpn_clients
+
+- name: Generate Clients configurations
+  template: src=client.conf.j2 dest={{openvpn_keydir}}/{{item}}.ovpn
+  with_items: openvpn_clients
+  notify: openvpn pack clients
+  register: openvpn_clients_changed
+
+- name: Setup PAM
+  template: src=openvpn.pam.j2 dest=/etc/pam.d/openvpn
+  when: openvpn_use_pam
+
+- name: Configure users
+  htpasswd: path={{openvpn_etcdir}}/users name={{item.name}} password={{item.password}} crypt_scheme=des_crypt
+  with_items: openvpn_use_pam_users
 
 - name: Configure server
   template: src=server.conf.j2 dest={{openvpn_etcdir}}/server.conf
