--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,7 +10,7 @@ openvpn_host: "{{inventory_hostname}}"              # The server address
 openvpn_port: 1194
 openvpn_proto: udp
 openvpn_dev: tun
-openvpn_server: 10.8.0.0 255.255.255.0
+openvpn_server: 10.8.0.0 255.255.255.0              # Set empty for skip
 openvpn_max_clients: 100
 openvpn_log: /var/log/openvpn.log                   # Log's directory
 openvpn_keepalive: "10 120"
@@ -21,6 +21,7 @@ openvpn_verb: 3
 openvpn_user: nobody
 openvpn_group: nogroup
 openvpn_resolv_retry: infinite
+openvpn_client_to_client: yes
 openvpn_server_options: []                          # Additional server options
                                                     # openvpn_server_options:
                                                     # - dev-node MyTap
