--- a/test.yml
+++ b/test.yml
@@ -1,7 +1,8 @@
 - hosts: all
   tasks:
-    - include: tasks/main.yml
+  - include: tasks/main.yml
   handlers:
-    - include: handlers/main.yml
+  - include: handlers/main.yml
   vars_files:
-    - 'defaults/main.yml'
+  - defaults/main.yml
+  - .travis.yml
