--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -30,6 +30,10 @@
     state=directory
   when: openvpn_client_config_dir is defined
 
+- name: Check if crl.pem exists
+  stat: path={{openvpn_keydir}}/crl.pem
+  register: crl_pem_file
+
 - name: Generate Clients configurations
   template: src=client.conf.j2 dest={{openvpn_keydir}}/{{item}}.ovpn
   with_items: openvpn_clients
