--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,6 +11,11 @@ openvpn_port: 1194
 openvpn_proto: udp
 openvpn_dev: tun
 openvpn_server: 10.8.0.0 255.255.255.0              # Set empty for skip
+openvpn_push_nets: []
+openvpn_dns: []
+openvpn_topology: subnet                            # Recommended topology but
+                                                    # brake compatibility with old Windows
+                                                    # net30 - legacy topology
 openvpn_max_clients: 100
 openvpn_log: /var/log/openvpn.log                   # Log's directory
 openvpn_keepalive: "10 120"
@@ -22,7 +27,7 @@ openvpn_user: nobody
 openvpn_group: nogroup
 openvpn_resolv_retry: infinite
 openvpn_client_to_client: yes
-openvpn_server_options: []                          # Additional server options
+openvpn_server_options: [duplicate-cn]              # Additional server options
                                                     # openvpn_server_options:
                                                     # - dev-node MyTap
                                                     # - client-to-client
@@ -43,7 +48,8 @@ openvpn_clients_revoke: []                        # Revoke clients certificates
 
 # Use PAM authentication
 openvpn_use_pam: yes
-openvpn_use_pam_users: []                         # If empty use system users
+openvpn_disable_cert: no
+#openvpn_use_pam_users: []                         # If empty use system users
                                                   # otherwise use users from the option
                                                   # openvpn_use_pam_users:
                                                   # - { name: user, password: password }
