--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,7 +4,7 @@
   service: name=openvpn state=restarted
 
 - name: openvpn pack clients
-  command: zip -j --password $ecured_vpn {{openvpn_keydir}}/{{item.item}} {{openvpn_keydir}}/{{item.item}}.crt {{openvpn_keydir}}/{{item.item}}.ovpn {{openvpn_keydir}}/{{item.item}}.key {{openvpn_keydir}}/ca.crt
+  command: zip -j --password {{ openvpn_pack_pass }} {{openvpn_keydir}}/{{item.item}} {{openvpn_keydir}}/{{item.item}}.crt {{openvpn_keydir}}/{{item.item}}.ovpn {{openvpn_keydir}}/{{item.item}}.key {{openvpn_keydir}}/ca.crt
   when: item.changed
   with_items: openvpn_clients_changed.results
 
