--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,11 +4,11 @@
   service: name=openvpn state=restarted
 
 - name: openvpn pack clients
-  command: zip -j --password {{ openvpn_pack_pass }} {{openvpn_keydir}}/{{item.item}} {{openvpn_keydir}}/{{item.item}}.crt {{openvpn_keydir}}/{{item.item}}.ovpn {{openvpn_keydir}}/{{item.item}}.key {{openvpn_keydir}}/ca.crt
+  command: zip -j {{openvpn_keydir}}/{{item.item.name}} {{openvpn_keydir}}/{{item.item.name}}.p12 {{openvpn_keydir}}/{{item.item.name}}.ovpn {{openvpn_keydir}}/ca.crt
   when: item.changed
-  with_items: openvpn_clients_changed.results
+  with_items: pfx.results
 
 - name: openvpn copy pack clients
-  fetch: src={{openvpn_keydir}}/{{item.item}}.zip dest=vpn_keys/{{item.item}}.zip flat=yes
+  fetch: src={{openvpn_keydir}}/{{item.item.name}}.zip dest=vpn_keys/{{item.item.name}}.zip flat=yes
   when: item.changed
-  with_items: openvpn_clients_changed.results
+  with_items: pfx.results
