--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -1,6 +1,4 @@
 ---
-- name: Ensure openvpn key dir has the right permission
-  file: path={{openvpn_keydir}} state=directory mode=0700 owner={{openvpn_user}}
 
 - name: Extract easy-rsa files
   unarchive: src=easy-rsa.tar.gz dest={{openvpn_etcdir}}
@@ -11,12 +9,31 @@
 
 - name: Generate Server keys
   command: "{{openvpn_etcdir}}/build-server.sh"
-  args: { creates: "{{ openvpn_keydir }}" }
+  args: { creates: "{{ openvpn_keydir }}/server.key" }
+  notify: [openvpn restart]
 
 - name: Generate Clients keys
-  command: "{{openvpn_etcdir}}/build-client.sh {{item}}"
-  args: { creates: "{{ openvpn_keydir }}/{{item}}.crt" }
+  command: "{{openvpn_etcdir}}/build-client.sh {{item.name}}"
+  args: { creates: "{{ openvpn_keydir }}/{{item.name}}.crt" }
   with_items: openvpn_clients
+
+- name: Convert Clients cert/key to p12
+  command: "openssl pkcs12 -export -out {{openvpn_keydir}}/{{item.name}}.p12 -inkey {{openvpn_keydir}}/{{item.name}}.key -in {{openvpn_keydir}}/{{item.name}}.crt -certfile {{openvpn_keydir}}/ca.crt -password pass:{{item.password}}"
+  args: { creates: "{{ openvpn_keydir }}/{{item.name}}.p12" }
+  with_items: openvpn_clients
+  notify: 
+    - openvpn pack clients
+    - openvpn copy pack clients
+  register: pfx
+
+- name: Ensure openvpn key dir has the right permission
+  file: path={{openvpn_keydir}} state=directory mode=0700 owner={{openvpn_user}}
+
+- name: Get client certificate fingerprint
+  shell: "openssl pkcs12 -in {{openvpn_keydir}}/{{item.item.name}}.p12 -nodes -passin pass:{{item.item.password}} | openssl x509 -noout -fingerprint | cut -d= -f2 | sed 's/:/ /g'"
+  with_items: pfx.results
+  when: item.changed
+  register: cert_fp
 
 - name: Revoke Clients
   command: "{{openvpn_etcdir}}/revoke-client.sh {{item}}"
@@ -40,12 +57,9 @@
   register: crl_pem_file
 
 - name: Generate Clients configurations
-  template: src=client.conf.j2 dest={{openvpn_keydir}}/{{item}}.ovpn
-  with_items: openvpn_clients
-  notify: 
-    - openvpn pack clients
-    - openvpn copy pack clients
-  register: openvpn_clients_changed
+  template: src=client.conf.j2 dest={{openvpn_keydir}}/{{item.item.item.name}}.ovpn
+  with_items: cert_fp.results
+  when: item.changed
 
 - name: Setup PAM
   template: src=openvpn.pam.j2 dest=/etc/pam.d/openvpn
