Initial commit of changes

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -5,5 +5,16 @@
 
 - name: openvpn pack clients
   command: tar cvzf {{openvpn_keydir}}/{{item.item}}.tar.gz -C {{openvpn_keydir}} {{item.item}}.crt {{item.item}}.key {{item.item}}.ovpn ca.crt
-  when: item.changed
+  when: item.changed and not openvpn_client_create_gateway_config
   with_items: openvpn_clients_changed.results
+
+- name: openvpn pack clients with client-all.ovpn
+  command: tar cvzf {{openvpn_keydir}}/{{item.item}}.tar.gz -C {{openvpn_keydir}} {{item.item}}.crt {{item.item}}.key {{item.item}}.ovpn {{item.item}}-all.ovpn ca.crt
+  when: item.changed and openvpn_client_create_gateway_config
+  with_items: openvpn_clients_changed.results
+
+- name: upload openvpn keys dir to s3
+  command: aws s3 sync --delete "{{openvpn_etcdir}}/keys/"  "{{s3_conf_path}}/keys/"
+
+- name: upload build-server.sh to s3
+  command: aws s3 cp "{{openvpn_etcdir}}/build-server.sh"  "{{s3_conf_path}}/openvpn-conf-dir/"
