--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -25,6 +25,7 @@ openvpn_user: nobody
 openvpn_group: nogroup
 openvpn_resolv_retry: infinite
 openvpn_client_to_client: yes
+openvpn_create_server_up: no                        # Add server.up.sh and server.up.d/
 openvpn_server_options: []                          # Additional server options
                                                     # openvpn_server_options:
                                                     # - dev-node MyTap
