--- a/tasks/install.deb.yml
+++ b/tasks/install.deb.yml
@@ -5,12 +5,14 @@
   with_items: [openvpn, udev, openssl]
 
 - name: Install apt extras
-  apt: name={{item}} update_cache=yes cache_valid_time=3600
-  with_items: [python-pip]
+  apt: name="{{item}}" update_cache=yes cache_valid_time=3600
+  with_items:
+    - python-pip
 
 - name: Install pip extras
-  pip: name={{item}}
-  with_items: [awscli]
+  pip: name="{{item}}"
+  with_items:
+    - awscli
 
 - name: Install dependencies (Debian)
   apt: name={{item}}
