--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -25,7 +25,7 @@ openvpn_user: nobody
 openvpn_group: nogroup
 openvpn_resolv_retry: infinite
 openvpn_client_to_client: yes
-openvpn_create_server_up: no                        # Add server.up.sh and server.up.d/
+openvpn_create_server_up: 'no'                      # Add server.up.sh and server.up.d/
 openvpn_server_options: []                          # Additional server options
                                                     # openvpn_server_options:
                                                     # - dev-node MyTap
@@ -35,7 +35,7 @@ openvpn_client_options: []                          # Additional client options
                                                     # - dev-node MyTap
                                                     # - client-to-client
 
-openvpn_client_create_gateway_config: no            # creates an additional $client-all.opvn for routing a client's outbound traffic through the VPN server
+openvpn_client_create_gateway_config: 'no'          # creates an additional $client-all.opvn for routing a client's outbound traffic through the VPN server
 
 openvpn_key_country: US
 openvpn_key_province: CA
