--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -56,6 +56,10 @@
   stat: path={{openvpn_keydir}}/crl.pem
   register: crl_pem_file
 
+- name: Check crl.pem ACL
+  file: path={{openvpn_keydir}}/crl.pem
+        owner={{ openvpn_user }} mode=400
+
 - name: Generate Clients configurations
   template: src=client.conf.j2 dest={{openvpn_keydir}}/{{item.item.item.name}}.ovpn
   with_items: cert_fp.results
