integrated option not to generate keys but move from another server

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,7 @@
 ---
 
 openvpn_enabled: yes                                # The role is enabled
+openvpn_generate_keys: no
 
 openvpn_etcdir: /etc/openvpn
 openvpn_keydir: "{{openvpn_etcdir}}/keys"
