--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -11,11 +11,13 @@
   command: "{{openvpn_etcdir}}/build-server.sh"
   args: { creates: "{{ openvpn_keydir }}/server.key" }
   notify: [openvpn restart]
+  when: openvpn_generate_keys
 
 - name: Generate Clients keys
   command: "{{openvpn_etcdir}}/build-client.sh {{item.name}}"
   args: { creates: "{{ openvpn_keydir }}/{{item.name}}.crt" }
   with_items: openvpn_clients
+  when: openvpn_generate_keys
 
 - name: Convert Clients cert/key to p12
   command: "openssl pkcs12 -export -out {{openvpn_keydir}}/{{item.name}}.p12 -inkey {{openvpn_keydir}}/{{item.name}}.key -in {{openvpn_keydir}}/{{item.name}}.crt -certfile {{openvpn_keydir}}/ca.crt -password pass:{{item.password}}"
@@ -25,14 +27,22 @@
     - openvpn pack clients
     - openvpn copy pack clients
   register: pfx
+  when: openvpn_generate_keys
 
 - name: Ensure openvpn key dir has the right permission
   file: path={{openvpn_keydir}} state=directory mode=0700 owner={{openvpn_user}}
 
+- name: Server keys and certs are copied
+  copy: src="../../../../../../VPN keys/server/{{ item }}" 
+        dest={{openvpn_keydir}}/{{ item }}
+        owner=root group=root mode=0600
+  with_items: [ "ca.crt","server.crt","server.key","dh1024.pem" ]
+  when: not openvpn_generate_keys
+
 - name: Get client certificate fingerprint
   shell: "openssl pkcs12 -in {{openvpn_keydir}}/{{item.item.name}}.p12 -nodes -passin pass:{{item.item.password}} | openssl x509 -noout -fingerprint | cut -d= -f2 | sed 's/:/ /g'"
   with_items: pfx.results
-  when: item.changed
+  when: item.changed and openvpn_generate_keys
   register: cert_fp
 
 - name: Revoke Clients
@@ -59,11 +69,12 @@
 - name: Check crl.pem ACL
   file: path={{openvpn_keydir}}/crl.pem
         owner={{ openvpn_user }} mode=400
+  when: crl_pem_file.stat.exists
 
 - name: Generate Clients configurations
   template: src=client.conf.j2 dest={{openvpn_keydir}}/{{item.item.item.name}}.ovpn
   with_items: cert_fp.results
-  when: item.changed
+  when: item.changed and openvpn_generate_keys
 
 - name: Setup PAM
   template: src=openvpn.pam.j2 dest=/etc/pam.d/openvpn
