--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -56,3 +56,6 @@
 
 - name: Ensure openvpn key dir has the right permission
   file: path={{openvpn_keydir}} state=directory mode=0700 owner={{openvpn_user}}
+
+- name: Set ip forwarding in the sysctl file and reload if necessary
+  sysctl: name="net.ipv4.ip_forward" value=1 sysctl_set=yes state=present reload=yes
