Added support for simple authentication

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -52,3 +52,7 @@ openvpn_use_pam_users: []                         # If empty use system users
 openvpn_use_ldap: no
 openvpn_ldap_tlsenable: 'no'
 openvpn_ldap_follow_referrals: 'no'
+
+# Use simple authentication (default is disabled)
+openvpn_simple_auth: no
+openvpn_simple_auth_password: ""
