--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -11,6 +11,13 @@
   command: "{{openvpn_etcdir}}/build-server.sh"
   args: { creates: "{{ openvpn_keydir }}" }
 
+- name: Generate tls-auth key
+  command: openvpn --genkey --secret {{ openvpn_tls_key }}
+    chdir="{{ openvpn_keydir }}"
+    creates="{{ openvpn_tls_key }}"
+  args: { creates: "{{ openvpn_keydir }}/{{ openvpn_tls_key }}" }
+  when: openvpn_tls_auth
+
 - name: Generate Clients keys
   command: "{{openvpn_etcdir}}/build-client.sh {{item}}"
   args: { creates: "{{ openvpn_keydir }}/{{item}}.crt" }
