restore old branch

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -12,3 +12,8 @@
 
 - name: restart collectd
   service: name=collectd state=restarted
+
+- name: openvpn pack clients
+  command: tar cvzf {{openvpn_keydir}}/{{item.item}}.tar.gz -C {{openvpn_keydir}} {{item.item}}.crt {{item.item}}.key {{item.item}}.ovpn ca.crt {{openvpn_tls_key if openvpn_tls_auth else ''}}
+  when: item.changed
+  with_items: openvpn_clients_changed.results
