--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -36,15 +36,16 @@
 - name: Generate Clients keys
   command: "{{openvpn_etcdir}}/build-client.sh {{item}}"
   args: { creates: "{{ openvpn_keydir }}/{{item}}.crt" }
-  with_items: "{{ openvpn_clients }}"
+  with_items: "{{ openvpn_clients | default([])}}"
 
 - name: Revoke Clients keys
   command: "{{openvpn_etcdir}}/revoke-client.sh {{item}}"
   args: { removes: "{{ openvpn_keydir }}/{{item}}.crt" }
-  with_items: "{{ openvpn_clients_revoke }}"
+  with_items: "{{ openvpn_clients_revoke | default([])}}"
 
 - include: read-client-files.yml
   when: openvpn_unified_client_profiles
+  with_items: "{{ openvpn_clients_revoke | default([])}}"
 
 - name: Create client configuration directory if requested
   file: >
