add support for keys and certs to be embedded in client conf

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,6 +4,6 @@
   service: name=openvpn state=restarted
 
 - name: openvpn pack clients
-  command: tar cvzf {{openvpn_keydir}}/{{item.item}}.tar.gz -C {{openvpn_keydir}} {{item.item}}.crt {{item.item}}.key {{item.item}}.ovpn ca.crt
+  command: tar cvzf {{openvpn_keydir}}/{{item.item.1}}.tar.gz -C {{openvpn_keydir}} {{item.item.1}}.crt {{item.item.1}}.key {{item.item.1}}.ovpn ca.crt
   when: item.changed
   with_items: openvpn_clients_changed.results
