--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -32,9 +32,23 @@
   stat: path={{openvpn_keydir}}/crl.pem
   register: crl_pem_file
 
-- name: Generate Clients configurations
-  template: src=client.conf.j2 dest={{openvpn_keydir}}/{{item}}.ovpn
+- name: Gather CA cert
+  command: cat {{ openvpn_keydir }}/ca.crt
+  register: openvpn_ca_cert
+
+- name: Gather client certs
+  command: cat {{ openvpn_keydir }}/{{ item }}.crt
   with_items: openvpn_clients
+  register: openvpn_client_certs
+
+- name: Gather client keys
+  command: cat {{ openvpn_keydir }}/{{ item }}.key
+  with_items: openvpn_clients
+  register: openvpn_client_keys
+
+- name: Generate Clients configurations
+  template: src=client.conf.j2 dest={{openvpn_keydir}}/{{item.1}}.ovpn force=yes
+  with_indexed_items: openvpn_clients
   notify: openvpn pack clients
   register: openvpn_clients_changed
 
