--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,7 +4,7 @@
   service: name={{openvpn_service}} state=restarted
 
 - name: openvpn pack clients
-  command: zip -j {{item.item}}.zip {{item.item}}.crt {{item.item}}.key {{item.item}}.ovpn ca.crt {{openvpn_tls_key if openvpn_tls_auth else ''}}
+  command: tar cvzf {{openvpn_keydir}}/{{item.item.1}}.tar.gz -C {{openvpn_keydir}} {{item.item.1}}.crt {{item.item.1}}.key {{item.item.1}}.ovpn ca.crt
   when: item.changed
   with_items: "{{openvpn_clients_changed.results}}"
   args:
