--- a/tasks/openvpn.yml
+++ b/tasks/openvpn.yml
@@ -10,5 +10,9 @@
 
 - include: configure.yml
 
+- include: configure.clients.yml
+  tags:
+    - client
+
 - name: Ensure OpenVPN is started
   service: name=openvpn state=started enabled=yes
