--- a/tasks/configure.clients.yml
+++ b/tasks/configure.clients.yml
@@ -27,8 +27,12 @@
 - name: Generate Clients configurations
   template: src=client.conf.j2 dest={{openvpn_keydir}}/{{item.1}}.ovpn force=yes
   with_indexed_items: openvpn_clients
-  notify: openvpn pack clients
   register: openvpn_clients_changed
+
+- name: openvpn pack clients
+  command: tar cvzf {{openvpn_keydir}}/{{item.item.1}}.tar.gz -C {{openvpn_keydir}} {{item.item.1}}.crt {{item.item.1}}.key {{item.item.1}}.ovpn ca.crt
+  when: item.changed
+  with_items: openvpn_clients_changed.results
 
 - name: Configure users
   htpasswd: path={{openvpn_etcdir}}/users name={{item.name}} password={{item.password}} crypt_scheme=des_crypt
