--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -6,4 +6,4 @@
 - name: openvpn pack clients
   command: tar cvzf {{openvpn_keydir}}/{{item.item}}.tar.gz -C {{openvpn_keydir}} {{item.item}}.crt {{item.item}}.key {{item.item}}.ovpn ca.crt
   when: item.changed
-  with_items: openvpn_clients_changed.results
+  with_items: "{{openvpn_clients_changed.results}}"
