--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -16,4 +16,4 @@
 - name: openvpn pack clients
   command: tar cvzf {{openvpn_keydir}}/{{item.item}}.tar.gz -C {{openvpn_keydir}} {{item.item}}.crt {{item.item}}.key {{item.item}}.ovpn ca.crt {{openvpn_tls_key if openvpn_tls_auth else ''}}
   when: item.changed
-  with_items: openvpn_clients_changed.results
+  with_items: "{{openvpn_clients_changed.results}}"
