--- a/tasks/install.deb.yml
+++ b/tasks/install.deb.yml
@@ -12,3 +12,8 @@
 - name: Install LDAP dependencies (Debian)
   apt: name=openvpn-auth-ldap force=yes
   when: openvpn_use_ldap
+
+- name: Install bridge dependencies (Debian)
+  apt: name={{item}}
+  when: openvpn_bridge
+  with_items: [bridge-utils]
