--- a/tasks/openvpn.yml
+++ b/tasks/openvpn.yml
@@ -10,5 +10,7 @@
 
 - include: configure.yml
 
+- include: setup-bridge.yml
+
 - name: Ensure OpenVPN is started
   service: name=openvpn state=started enabled=yes
