Added support for OpenVPN bridged mode

--- a/tasks/openvpn.yml
+++ b/tasks/openvpn.yml
@@ -23,6 +23,7 @@
 - include: configure.clients.yml
   tags:
     - client
+- include: setup-bridge.yml
 
 - name: Ensure OpenVPN is started
   service: name={{openvpn_service}} state=started enabled=yes
