--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -67,3 +67,7 @@ openvpn_simple_auth_password: ""
 
 # Whether to embed CA, cert, and key info inside client OVPN config file.
 openvpn_unified_client_profiles: no
+# Monitoring
+openvpn_nagios_plugin_dir: "{{ openvpn_etcdir }}/nagios-plugins"
+openvpn_monitoring_clients_warning: 5
+openvpn_monitoring_clients_critical: 10
