--- a/tasks/openvpn.yml
+++ b/tasks/openvpn.yml
@@ -26,3 +26,7 @@
 
 - name: Ensure OpenVPN is started
   service: name={{openvpn_service}} state=started enabled=yes
+
+- include: monitoring.yml
+  tags:
+    - monitoring
