--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -71,3 +71,8 @@ openvpn_unified_client_profiles: no
 openvpn_nagios_plugin_dir: "{{ openvpn_etcdir }}/nagios-plugins"
 openvpn_monitoring_clients_warning: 5
 openvpn_monitoring_clients_critical: 10
+
+# Collectd openvpn plugin configuration
+openvpn_status_file_path: {{ openvpn_etcdir }}/{{ openvpn_status }}
+openvpn_enable_collect_user_count: true
+openvpn_enable_collect_individual_users: true 
