--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -9,3 +9,6 @@
   with_items: "{{openvpn_clients_changed.results}}"
   args:
     chdir: "{{ openvpn_keydir }}"
+
+- name: restart collectd
+  service: name=collectd state=restarted
