--- a/tasks/openvpn.yml
+++ b/tasks/openvpn.yml
@@ -11,4 +11,4 @@
 - include: configure.yml
 
 - name: Ensure OpenVPN is started
-  service: name=openvpn state=started enabled=yes
+  service: name={{openvpn_service}} state=started enabled=yes
