--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -1,61 +1,63 @@
 ---
 
-- name: Extract easy-rsa files
-  unarchive: src=easy-rsa.tar.gz dest={{openvpn_etcdir}}
-  when: not openvpn_use_system_easyrsa
+- block:
+  - name: Extract easy-rsa files
+    unarchive: src=easy-rsa.tar.gz dest={{openvpn_etcdir}}
+    when: not openvpn_use_system_easyrsa
 
-- name: Check if easy-rsa 2.x is available from the system
-  stat: path=/usr/share/easy-rsa/build-ca
-  register: openvpn_easyrsa_check
-  when: openvpn_use_system_easyrsa
+  - name: Check if easy-rsa 2.x is available from the system
+    stat: path=/usr/share/easy-rsa/build-ca
+    register: openvpn_easyrsa_check
+    when: openvpn_use_system_easyrsa
 
-- fail:
-    msg: >
-      EasyRSA 2.x is not present in /usr/share/easy-rsa.
-      Ensure the easy-rsa package is installed or disable the `openvpn_use_system_easyrsa` option.
-  when: openvpn_use_system_easyrsa and not openvpn_easyrsa_check.stat.exists
+  - fail:
+      msg: >
+        EasyRSA 2.x is not present in /usr/share/easy-rsa.
+        Ensure the easy-rsa package is installed or disable the `openvpn_use_system_easyrsa` option.
+    when: openvpn_use_system_easyrsa and not openvpn_easyrsa_check.stat.exists
 
-- name: Generate scripts
-  template: src={{item}}.j2 dest={{openvpn_etcdir}}/{{item}} mode=0700
-  with_items: [vars, build-server.sh, build-client.sh, revoke-client.sh]
+  - name: Generate scripts
+    template: src={{item}}.j2 dest={{openvpn_etcdir}}/{{item}} mode=0700
+    with_items: [vars, build-server.sh, build-client.sh, revoke-client.sh]
 
-- name: Generate Server keys
-  command: "{{openvpn_etcdir}}/build-server.sh"
-  args: { creates: "{{ openvpn_keydir }}" }
+  - name: Generate Server keys
+    command: "{{openvpn_etcdir}}/build-server.sh"
+    args: { creates: "{{ openvpn_keydir }}" }
 
-- name: Generate tls-auth key
-  command: openvpn --genkey --secret {{ openvpn_tls_key }}
-    chdir="{{ openvpn_keydir }}"
-    creates="{{ openvpn_tls_key }}"
-  args: { creates: "{{ openvpn_keydir }}/{{ openvpn_tls_key }}" }
-  when: openvpn_tls_auth
+  - name: Generate tls-auth key
+    command: openvpn --genkey --secret {{ openvpn_tls_key }}
+      chdir="{{ openvpn_keydir }}"
+      creates="{{ openvpn_tls_key }}"
+    args: { creates: "{{ openvpn_keydir }}/{{ openvpn_tls_key }}" }
+    when: openvpn_tls_auth
 
-- name: Generate Clients keys
-  command: "{{openvpn_etcdir}}/build-client.sh {{item}}"
-  args: { creates: "{{ openvpn_keydir }}/{{item}}.crt" }
-  with_items: "{{ openvpn_clients }}"
+  - name: Generate Clients keys
+    command: "{{openvpn_etcdir}}/build-client.sh {{item}}"
+    args: { creates: "{{ openvpn_keydir }}/{{item}}.crt" }
+    with_items: "{{ openvpn_clients }}"
 
-- name: Revoke Clients keys
-  command: "{{openvpn_etcdir}}/revoke-client.sh {{item}}"
-  args: { removes: "{{ openvpn_keydir }}/{{item}}.crt" }
-  with_items: "{{ openvpn_clients_revoke }}"
+  - name: Revoke Clients keys
+    command: "{{openvpn_etcdir}}/revoke-client.sh {{item}}"
+    args: { removes: "{{ openvpn_keydir }}/{{item}}.crt" }
+    with_items: "{{ openvpn_clients_revoke }}"
 
-- name: Create client configuration directory if requested
-  file: >
-    path={{openvpn_client_config_dir}}
-    mode=755
-    state=directory
-  when: openvpn_client_config_dir is defined
+  - name: Create client configuration directory if requested
+    file: >
+      path={{openvpn_client_config_dir}}
+      mode=755
+      state=directory
+    when: openvpn_client_config_dir is defined
+
+  - name: Generate Clients configurations
+    template: src=client.conf.j2 dest={{openvpn_keydir}}/{{item}}.ovpn
+    with_items: "{{ openvpn_clients }}"
+    notify: openvpn pack clients
+    register: openvpn_clients_changed
+  when: not openvpn_skip_keys
 
 - name: Check if crl.pem exists
   stat: path={{openvpn_keydir}}/crl.pem
   register: crl_pem_file
-
-- name: Generate Clients configurations
-  template: src=client.conf.j2 dest={{openvpn_keydir}}/{{item}}.ovpn
-  with_items: "{{ openvpn_clients }}"
-  notify: openvpn pack clients
-  register: openvpn_clients_changed
 
 - name: Setup PAM
   template: src=openvpn.pam.j2 dest=/etc/pam.d/openvpn
