--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -53,38 +53,40 @@
     with_items: "{{ openvpn_clients }}"
     notify: openvpn pack clients
     register: openvpn_clients_changed
-  when: not openvpn_skip_keys
+  when: not openvpn_skip_keys or openvpn_only_keys
 
-- name: Check if crl.pem exists
-  stat: path={{openvpn_keydir}}/crl.pem
-  register: crl_pem_file
+- block:
+  - name: Check if crl.pem exists
+    stat: path={{openvpn_keydir}}/crl.pem
+    register: crl_pem_file
 
-- name: Setup PAM
-  template: src=openvpn.pam.j2 dest=/etc/pam.d/openvpn
-  when: openvpn_use_pam
+  - name: Setup PAM
+    template: src=openvpn.pam.j2 dest=/etc/pam.d/openvpn
+    when: openvpn_use_pam
 
-- name: Configure users
-  htpasswd: path={{openvpn_etcdir}}/users name={{item.name}} password={{item.password}} crypt_scheme=des_crypt
-  with_items: "{{ openvpn_use_pam_users }}"
+  - name: Configure users
+    htpasswd: path={{openvpn_etcdir}}/users name={{item.name}} password={{item.password}} crypt_scheme=des_crypt
+    with_items: "{{ openvpn_use_pam_users }}"
 
-- name: Setup LDAP
-  template: src=auth-ldap.conf.j2 dest=/etc/openvpn/auth-ldap.conf
-  when: openvpn_use_ldap
+  - name: Setup LDAP
+    template: src=auth-ldap.conf.j2 dest=/etc/openvpn/auth-ldap.conf
+    when: openvpn_use_ldap
 
-- name: Setup simple authentication
-  template:
-    src: auth-client.sh.j2
-    dest: "{{openvpn_etcdir}}/auth-client.sh"
-    mode: 0755
-  when: openvpn_simple_auth and openvpn_simple_auth_password
-  notify: [openvpn restart]
+  - name: Setup simple authentication
+    template:
+      src: auth-client.sh.j2
+      dest: "{{openvpn_etcdir}}/auth-client.sh"
+      mode: 0755
+    when: openvpn_simple_auth and openvpn_simple_auth_password
+    notify: [openvpn restart]
 
-- name: Configure server
-  template: src=server.conf.j2 dest={{openvpn_etcdir}}/server.conf
-  notify: [openvpn restart]
+  - name: Configure server
+    template: src=server.conf.j2 dest={{openvpn_etcdir}}/server.conf
+    notify: [openvpn restart]
 
-- name: Ensure openvpn key dir has the right permission
-  file: path={{openvpn_keydir}} state=directory mode=0700 owner={{openvpn_user}}
+  - name: Ensure openvpn key dir has the right permission
+    file: path={{openvpn_keydir}} state=directory mode=0700 owner={{openvpn_user}}
 
-- name: Set ip forwarding in the sysctl file and reload if necessary
-  sysctl: name="net.ipv4.ip_forward" value=1 sysctl_set=yes state=present reload=yes
+  - name: Set ip forwarding in the sysctl file and reload if necessary
+    sysctl: name="net.ipv4.ip_forward" value=1 sysctl_set=yes state=present reload=yes
+  when: not openvpn_only_keys
