Fix server key existence detection

--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -22,7 +22,7 @@
 
   - name: Generate Server keys
     command: "{{openvpn_etcdir}}/build-server.sh"
-    args: { creates: "{{ openvpn_keydir }}" }
+    args: { creates: "{{ openvpn_keydir }}/ca.crt" }
 
   - name: Generate tls-auth key
     command: openvpn --genkey --secret {{ openvpn_tls_key }}
