--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -2,7 +2,7 @@
 
 - block:
   - name: Extract easy-rsa files
-    unarchive: src=easy-rsa.tar.gz dest={{openvpn_etcdir}}
+    unarchive: src=easy-rsa.tar.gz dest="{{ openvpn_etcdir }}"
     when: not openvpn_use_system_easyrsa
 
   - name: Check if easy-rsa 2.x is available from the system
@@ -16,40 +16,82 @@
         Ensure the easy-rsa package is installed or disable the `openvpn_use_system_easyrsa` option.
     when: openvpn_use_system_easyrsa and not openvpn_easyrsa_check.stat.exists
 
-  - name: Generate scripts
-    template: src={{item}}.j2 dest={{openvpn_etcdir}}/{{item}} mode=0700
-    with_items: [vars, build-server.sh, build-client.sh, revoke-client.sh]
+  - name: Generate vars file
+    template:
+      src: "vars.j2"
+      dest: "{{ openvpn_etcdir }}/vars"
+      mode: 0700
+  
+  - name: Create key directory
+    file:
+      path: "{{ openvpn_keydir }}"
+      state: directory
+      mode: 0700
 
-  - name: Generate Server keys
-    command: "{{openvpn_etcdir}}/build-server.sh"
-    args: { creates: "{{ openvpn_keydir }}/ca.crt" }
+  - name: Create key index file
+    copy:
+      dest: "{{ openvpn_keydir }}/index.txt"
+      mode: 0700
+      content: ""
+      force: no
+  
+  - name: Create serial file
+    copy:
+      dest: "{{ openvpn_keydir }}/serial"
+      mode: 0700
+      content: "01"
+      force: no
+
+  - name: Initialize CA
+    shell: . "{{ openvpn_etcdir }}/vars" && "$EASY_RSA/pkitool" --initca
+    args:
+      chdir: "{{ openvpn_keydir }}"
+      creates: "{{ openvpn_keydir }}/ca.crt"
+  
+  - name: Create server certificate
+    shell: . "{{openvpn_etcdir}}/vars" && "$EASY_RSA/pkitool" --server server
+    args:
+      chdir: "{{ openvpn_keydir }}"
+      creates: "{{ openvpn_keydir }}/server.crt"
+      
+  - name: Create DH parameters
+    command: openssl dhparam -out '{{ openvpn_keydir }}/dh{{ openvpn_key_size }}.pem' {{ openvpn_key_size }}
+    args:
+      creates: "{{ openvpn_keydir }}/dh{{ openvpn_key_size }}.pem"
 
   - name: Generate tls-auth key
-    command: openvpn --genkey --secret {{ openvpn_tls_key }}
-      chdir="{{ openvpn_keydir }}"
-      creates="{{ openvpn_tls_key }}"
-    args: { creates: "{{ openvpn_keydir }}/{{ openvpn_tls_key }}" }
+    command: openvpn --genkey --secret "{{ openvpn_tls_key }}"
+    args:
+      chdir: "{{ openvpn_keydir }}"
+      creates: "{{ openvpn_keydir }}/{{ openvpn_tls_key }}"
     when: openvpn_tls_auth
 
   - name: Generate Clients keys
-    command: "{{openvpn_etcdir}}/build-client.sh {{item}}"
-    args: { creates: "{{ openvpn_keydir }}/{{item}}.crt" }
+    shell: . "{{ openvpn_etcdir }}/vars" && "$EASY_RSA/pkitool" "{{ item }}"
+    args:
+      chdir: "{{ openvpn_keydir }}"
+      creates: "{{ openvpn_keydir }}/{{ item }}.crt"
     with_items: "{{ openvpn_clients }}"
 
   - name: Revoke Clients keys
-    command: "{{openvpn_etcdir}}/revoke-client.sh {{item}}"
-    args: { removes: "{{ openvpn_keydir }}/{{item}}.crt" }
+    shell: >
+      . "{{ openvpn_etcdir }}/vars" && \
+      "$EASY_RSA/revoke-full" "{{ item }}" && \
+      rm -f '{{ openvpn_keydir }}/{{ item }}'{.crt,.csr,.key,.openvpn,.tar.gz}
+    args:
+      chdir: "{{ openvpn_keydir }}" 
+      removes: "{{ openvpn_keydir }}/{{ item }}.crt"
     with_items: "{{ openvpn_clients_revoke }}"
 
   - name: Create client configuration directory if requested
-    file: >
-      path={{openvpn_client_config_dir}}
-      mode=755
-      state=directory
+    file:
+      path: "{{ openvpn_client_config_dir }}"
+      mode: 0755
+      state: directory
     when: openvpn_client_config_dir is defined
 
   - name: Generate Clients configurations
-    template: src=client.conf.j2 dest={{openvpn_keydir}}/{{item}}.ovpn
+    template: src=client.conf.j2 dest="{{ openvpn_keydir}}/{{ item }}.ovpn"
     with_items: "{{ openvpn_clients }}"
     notify: openvpn pack clients
     register: openvpn_clients_changed
